--- a/manifiestaFront/src/styles/style.scss
+++ b/manifiestaFront/src/styles/style.scss
@@ -40,3 +40,25 @@
         }
     }
 }
+
+.spotify-autorisation-card{
+    background-color: rgb(7, 144, 98) !important;
+    box-shadow: 0px 0px 73px -24px rgba(0, 0, 0, 0.386) inset;
+    border-radius: 50px !important;
+    width: 90% !important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    button{
+        margin-top: 20px;
+    }
+}
+
+.flex{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
