--- a/manifiestaFront/src/styles/style.scss
+++ b/manifiestaFront/src/styles/style.scss
@@ -266,3 +266,11 @@
         margin: 10px;
     }
 }
+
+.selected-button {
+    background-color: #ff6a3c !important; // Orange, par exemple
+    color: white !important;
+    border-color: ff6a3c !important;
+}
+
+
